# ymago

./: AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: batch-processing.md
docs/source/: conf.py  index.rst
src/ymago/: __init__.py  _version.py  api.py  cli.py  config.py  models.py
src/ymago/core/: __init__.py  backends.py  batch_parser.py  cloud_storage.py  generation.py  io_utils.py  notifications.py  storage.py
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_cli_extended.py  test_config.py  test_config_extended.py
tests/core/: __init__.py  test_backends.py  test_cloud_storage.py  test_generation.py  test_io_utils.py  test_notifications.py  test_storage.py
tests/integration/: test_batch_cli.py  test_batch_resilience.py
tests/unit/: test_batch_backend.py  test_batch_models.py  test_batch_parser.py
